# kiwi_com

./: .gitignore  .local_env  README.md  docker-compose.yml
backend/: Dockerfile  init.sh  pyproject.toml  uwsgi.ini
backend/src/: background_worker.py  conf.py  server.py
backend/src/kiwi/: client.py  exceptions.py
backend/src/server/: urls.py  views.py
backend/src/server/templates/: __init__.py  chart.html  table.html
backend/src/storage/: interface.py  models.py  redis_storage.py
backend/src/templates/: chart.html
db/redis/: redis.conf
nginx/: Dockerfile  nginx.conf
