[tool.poetry]
name = "kiwi"
version = "0.1.0"
description = "Cached kiwi.com API"
authors = ["RusJr <binderrrr@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.5"
uwsgi = "^2.0"
falcon = "^2.0.0"
requests = "^2.22.0"
redis = "^3.3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
